hotfix: fix visibility of i icon popup on tasks list
Why: Changes from PR2725 (on fixing the blacked-out, non-interactive tasks list on safari) disrupted the fixes from PR2660 (on fixing the visibility of the i icon popup on each task). This commit resolves both issues.

--- a/src/components/TeamMemberTasks/style.css
+++ b/src/components/TeamMemberTasks/style.css
@@ -156,20 +156,35 @@
 .right-padding-temp-fix {
   padding-right: 0px !important;
 }
+
 .table-row {
   position: relative;
 }
 
 .taking-time-off-content-div {
   background-color: rgba(0, 0, 25, 0.7);
-  position: absolute;
-  width: 100%;
-  height: calc(100% - 2px);
-  top: 1px;
-  left: 0;
-  display: flex;
-  justify-content: center;
+  height: 100%;
+  justify-items: center;
   align-items: center;
+  text-align: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 10;
+}
+
+.row-content {
+  position: relative;
+  height: 100%;
+}
+
+.no-bottom-margin {
+  margin-bottom: 0 !important;
+}
+
+.remove-padding {
+  padding: 0 !important;
 }
 
 .taking-time-off-table-div:hover {
@@ -285,25 +300,28 @@
 
 .compress-time-off-detail-button{
   color: white;
-  position: absolute;
-  right: 1px;
-  bottom: 1px;
   border: none;
   background-color: transparent;
   border-radius: 5px;
+  justify-self: end;
 }
 
 .compress-time-off-detail-button:hover,.expand-time-off-detail-button:hover{
   background-color: rgba(0, 0, 25, 0.6);
 }
 
+.grid-container {
+  display: grid;
+  grid-template-rows: 1fr auto;
+}
+
 .expand-time-off-detail-button{
   color: white;
-  position: absolute;
-  right: 1px;
-  bottom: 1px;
   background-color: rgba(0, 0, 25, 0.7);
   border-radius: 5px;
+  justify-self: end;
+  margin-right: -12px;
+  margin-bottom: -12px;
 }
 
 .time-off-detail-modal-card-container{
@@ -477,6 +495,11 @@
 
   .deadlineCount {
     right: 2px;
+  }
+
+  .expand-time-off-detail-button {
+    margin-right: 0;
+    margin-bottom: 0;
   }
 }
 
